--- a/RockPaperScissors/Views/GamePlay/Index.cshtml
+++ b/RockPaperScissors/Views/GamePlay/Index.cshtml
@@ -24,7 +24,7 @@
             {
               <b></b>
               
-                <a href="/cars/@myGame.Id"><li><b>@myGame.Player1</b></li></a>
+                <a href="/gameplay/@myGame.Id"><li><b>See Winner</b></li></a>
         
             } 
         
@@ -38,12 +38,12 @@
 
 </ul>
     <p>What would you like to do next:</p>
-    <a href="cars/new" class="btn btn-dark">Add Cars</a>
+    <a href="gameplay/new" class="btn btn-dark">Add Cars</a>
     <a href="/" class="btn btn-dark">Home</a>
     <br>
     <br>
 
-    <form action="cars/delete" method="get">
+    <form action="gameplay/delete" method="get">
       <button class="btn btn-danger" type="submit">Clear All </button>
     </form>
     
