--- a/RockPaperScissors/Views/Home/Index.cshtml
+++ b/RockPaperScissors/Views/Home/Index.cshtml
@@ -24,7 +24,10 @@
         <br>
     
     
-    <a href='/indexplaying' class="">Play with Computer(Single Player)</a>
+    <a href='/gameplay' class="">See List of previous Winners</a>
+    <br>
+    <br>
+    <a href='/gameplay/newsingle' class="">Play with Computer(Single Player)</a>
     <br>
     <br>
     <a href='/gameplay/newmulti' class="">Play With a Friend(Multiplayer)</a>
